--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "@fontsource/montserrat": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@next/env": "^15.3.1",
+    "dotenv": "^16.5.0",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
+    "next-env": "^1.1.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
